Fixing header text on mobile.

--- a/css/main.scss
+++ b/css/main.scss
@@ -119,6 +119,10 @@ body {
     .navbar-brand {
         font-size: 14px;
     }
+
+    .header-content {
+      top: -100vh;
+    }
 }
 
 hr.primary {
